[Feature] Declare Module as broken

--- a/Resources/Private/Backend/Templates/Theme/Index.html
+++ b/Resources/Private/Backend/Templates/Theme/Index.html
@@ -31,6 +31,13 @@
 
 	<div class="centered flash-message container"></div>
 
+	<div class="typo3-message message-information">
+		<div class="message-body">
+			This module is thought to help you installing themes from different sources.<br>
+			Currently it's not functional. Please use the extensionmanager to install themes or pick some from the git repos at http://github.com/typo3-themes
+		</div>
+	</div>
+
 	<div id="container-main">
 		<div id="container-main-top" style="width: 98%">
 			asdf
