--- a/Resources/Private/Backend/Layouts/Default.html
+++ b/Resources/Private/Backend/Layouts/Default.html
@@ -2,26 +2,37 @@
 
 <f:be.container pageTitle="Theme Manager" enableJumpToUrl="false" enableClickMenu="false" loadPrototype="false"
 				loadScriptaculous="false" loadExtJs="false" loadExtJsTheme="true" loadJQuery="true"
-				includeCssFiles="{
-					0:'{f:uri.resource(path:\'StyleSheet/bootstrap.css\')}',
-					1:'{f:uri.resource(path:\'StyleSheet/bootstrap-responsive.css\')}',
-					2:'{f:uri.resource(path:\'StyleSheet/themes-manager.css\')}',
-					3:'{f:uri.resource(path:\'StyleSheet/bootstrap-datatables.css\')}'
-				}"
-				includeJsFiles="{
-					0:'{f:uri.resource(path:\'JavaScript/Bootstrap/bootstrap.min.js\')}'
-					1:'{f:uri.resource(path:\'JavaScript/Bootstrap/bootbox.min.js\')}'
-					2:'{f:uri.resource(path:\'Bootstrap/bootstrapx-clickover.js\')}'
-					3:'{f:uri.resource(path:\'ThemesManager.js\')}'
-}">
-	<script type="text/javascript">
-		// Declare namespace
-		window.ThemesManager = {};
-		// Just initialize variable with empty value.
-		ThemesManager.icons = {}
-	</script>
+		>
 
-	<f:render section="main"/>
+	<div class="typo3-fullDoc">
+		<div id="typo3-docheader">
+			<div id="typo3-docheader-row1">
+				<div class="buttonsleft">
+
+				</div>
+				<div class="buttonsright">
+
+				</div>
+			</div>
+			<div id="typo3-docheader-row2">
+				<div class="docheader-row2-left">
+					<f:be.buttons.csh />
+					<f:be.menus.actionMenu>
+							<f:be.menus.actionMenuItem label="Overview" controller="" action="index" />
+					</f:be.menus.actionMenu>
+				</div>
+				<div class="docheader-row2-right">
+
+				</div>
+			</div>
+		</div>
+		<div id="typo3-docbody-">
+			<div id="typo3-inner-docbody">
+				<f:flashMessages/>
+				<f:render section="main" />
+			</div>
+		</div>
+	</div>
 
 </f:be.container>
 
