--- a/Resources/Private/Backend/Templates/Theme/Index.html
+++ b/Resources/Private/Backend/Templates/Theme/Index.html
@@ -5,42 +5,12 @@
 <f:layout name="Default"/>
 
 <f:section name="main">
-
-	<div class="navbar navbar-fixed-top">
-		<div class="navbar-typo3">
-			<div class="container-fluid">
-
-				<div>
-					<div id="navbar-main">
-						<div class="row-fluid">
-							<div class="span6">
-
-
-							</div>
-							<div class="span6 toolbar-left">
-							</div>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
-
-	<f:flashMessages/>
-
-	<div class="centered flash-message container"></div>
+	<h1>Themes Manager</h1>
 
 	<div class="typo3-message message-information">
 		<div class="message-body">
 			This module is thought to help you installing themes from different sources.<br>
 			Currently it's not functional. Please use the extensionmanager to install themes or pick some from the git repos at http://github.com/typo3-themes
-		</div>
-	</div>
-
-	<div id="container-main">
-		<div id="container-main-top" style="width: 98%">
-			asdf
 		</div>
 	</div>
 
